--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -7,17 +7,31 @@
 
     <title><%- locals.title %></title>
     <meta name="description" content="<%- locals.description %>" />
-    <link rel="stylesheet" href="/css/main.css">
-
+    
+    // BootStrap Stylesheet
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
+    
+    //Main Stylesheet
+    <link rel="stylesheet" href="/css/main.css"/>
+
+    //Font Links
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;700&family=Unbounded:wght@300;700&display=swap" rel="stylesheet">
+
   </head>
   <body>
+  
+
+
+    <%- include('../partials/header.ejs') %>
     <%- body %>
+    <%- include('../partials/footer.ejs') %>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
