--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,1 +1,30 @@
-Header
+<header class="p-3 bg-dark text-white">
+  <div class="container-fluid">
+    <div
+      class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start"
+    >
+      <a
+        href="/"
+        class="d-flex align-items-center mb-2 mb-lg-0 text-primary text-decoration-none fw-bold fs-2"
+      >
+        Notes
+      </a>
+
+      <ul
+        class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0"
+      >
+        <li><a href="/" class="nav-link px-2 text-secondary">Home</a></li>
+        <li><a href="#" class="nav-link px-2 text-white">Features</a></li>
+        <li><a href="#" class="nav-link px-2 text-white">FAQs</a></li>
+        <li><a href="/about" class="nav-link px-2 text-white">About</a></li>
+      </ul>
+
+      <div class="text-end">
+        <a href="/auth/google" type="button" class="btn btn-outline-light me-2">
+          Sign Up
+        </a>
+        <a href="/auth/google" type="button" class="btn btn-warning">Sign In</a>
+      </div>
+    </div>
+  </div>
+</header>
