--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -8,7 +8,7 @@
     <title><%- locals.title %></title>
     <meta name="description" content="<%- locals.description %>" />
     
-    // BootStrap Stylesheet
+    <% /* Bootstrap Stylesheet */ %>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -16,18 +16,16 @@
       crossorigin="anonymous"
     />
     
-    //Main Stylesheet
+    <% /* Main Stylesheet */ %>
     <link rel="stylesheet" href="/css/main.css"/>
 
-    //Font Links
+    <% /* Fonts */ %>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;700&family=Unbounded:wght@300;700&display=swap" rel="stylesheet">
 
   </head>
   <body>
-  
-
 
     <%- include('../partials/header.ejs') %>
     <%- body %>
